...
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>

    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>
...
    <string name="unableToConnect">Could not connect. Try connecting again.</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>

...
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning for MD610 photometer…</string>

    <!--About Screen-->
    <string name="waterQualitySystem">Water &amp; Soil Quality System</string>
    <string name="copyrightMessage">Copyright © Stichting Akvo</string>
    <string name="legalInformation">Legal Information</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="settings_disabled">Settings disabled</string>

    <!--Software notices-->
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="apache_license_2">Apache License 2.0</string>
...
    <string name="cca_share_license">CC BY-NC-SA 4.0 – International</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="software_notices">Software Notices</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>

    <!--Intro-->
    <string name="connect_with_app">Connect with Akvo Flow</string>
    <string name="a_water_quality_testing_solution">A water quality testing solution supporting over 20 parameters, like pH, E.coli or free chlorine.</string>
    <string name="test_water_quality_using">Test water quality using connected colorimetry, microbiology, sensor and strip tests.</string>
    <string name="app_is_integrated">Akvo Caddisfly is integrated with Akvo Flow, a data collection and monitoring tool.</string>
    <string name="to_conduct_a_water_quality_test">To conduct a water quality test go to Flow and select the Caddisfly question.</string>
    <string name="go_to_external_app">Go to Akvo Flow</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>

    <!--App Update-->
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
...
