...
    <string name="fluoride">Water - Fluoride</string>
    <string name="chromium">Water - Chromium</string>
    <string name="coliforms">Coliforms</string>
    <string name="arsenic">Water - Arsenic</string>
    <string name="freeChlorine">Water - Free Chlorine</string>
    <string name="iron">Water - Total Iron</string>
    <string name="electricalConductivity">Water - Electrical Conductivity</string>

    <!--Akvo Flow -->
    <string name="unnamedDataPoint">Unnamed data point</string>
    <string name="addDataPoint">Add Data Point</string>
    <string name="goToText">Go to test</string>
    <string name="useExternalSource">Use External Source</string>
...
