...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:alpha="0.8"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/appName"
                    android:textAllCaps="false"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
...
